--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 .box{
   border: 2px solid #fff;
  border-radius: 10px;
-box-shadow: 3px 3px 0px 800px rgba(0,0,0,0.3);
+box-shadow: 3px 3px 0px 800px rgba(0,0,0,0.6);
   height: 180px;
   width: 100%;
   max-width: 320px;
@@ -88,7 +88,7 @@ position: fixed;
 
 
 #caktus-pic-preview .rcrop-outer-wrapper{
-    opacity: .3;
+    opacity: .6;
 }
 #caktus-pic-preview .rcrop-outer{
     background: #000;
@@ -135,9 +135,10 @@ position: fixed;
 
 #caktus-pic-preview .clayfy-touch-device.clayfy-handler{
     background: none;
-    border : 0 solid #000;
+    border : 0 solid black;
     border-bottom-width: 6px;
     border-right-width: 6px;
+    
 }
 
 </style>
