--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@ top: 150px;
 }
 
 #caktus-snap, .caktus-crop-btn{
-  height: 70px;
-  width: 70px;
-  border-radius: 35px;
-  background-color: #fff;
-  outline: 6px solid #CFD0D9;
+  height: 90px;
+  width: 90px;
+  border-radius: 45px;
+  background-color: transparent;
+  border: 8px solid #CFD0D9;
   
 }
 .caktus-snap-container{
@@ -248,8 +248,6 @@ const {height, width} = getCameraResolution()
       videoElem.play()
     videoHeight = videoElem.videoHeight
     videoWidth = videoElem.videoWidth
-    
-    alert(vide)
     }
     
   }
