--- a/test.html
+++ b/test.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <head>
     <script type="module" src="https://unpkg.com/camera-component/dist/camera-component/camera-component.esm.js"></script>
     <style>
