--- a/index.html
+++ b/index.html
@@ -223,6 +223,8 @@ const {height, width} = getCameraResolution()
    
     const constraints = {
       video: {
+     width: {ideal: width - 80}, 
+     height: {ideal: height}, 
       facingMode: {
         exact: "environment"
       },
