--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ top: 150px;
   width: 90px;
   border-radius: 45px;
   background-color: transparent;
-  border: 8px solid #CFD0D9;
+  border: 8px solid #fff;
   
 }
 .caktus-snap-container{
