--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ position: fixed;
 
 #caktus-pic-preview .clayfy-touch-device.clayfy-handler{
     background: none;
-    border : 0 solid black;
+    border : 0 solid #68FF00;
     border-bottom-width: 6px;
     border-right-width: 6px;
     
